# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.536 2006/01/27 15:04:07 rocket Exp $

  27 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix type error when kernel packages arent defined

  27 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot_template.spec,
  examples/stage4_template.spec:
  Added more verbose wording and examples for pkgcache_path and
  kerncache_path, where necessary.

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/create-iso.sh:
  Really fixing bug #120475 this time.  This is 2.0_rc25.

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/create-iso.sh:
  Added patch from bug #120475 that resolves HFS blessing on PPC*. This is
  2.0_rc24.

  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  +livecd/cdtar/isolinux-elilo-memtest86+-cdtar.tar.bz2,
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh:
  Added initial support for EFI booting on x86. This is completely untested,
  so use it at your own risk. Also, no bug reports without patches, please.
  This is catalyst 2.0_rc23.

  26 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh:
  kmerge should have been kerncache

  26 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh,
  targets/support/pre-kmerge.sh:
  Fix a few other places for the kerncache update

  26 Jan 2006; Eric Edgar <rocket@gentoo.org>
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot2_template.spec,
  examples/netboot_template.spec, examples/stage4_template.spec,